--- a/index.css
+++ b/index.css
@@ -5,10 +5,12 @@ html, body {
     width: 100% !important;
     margin-left: 0;
     margin-right: 0;
-    margin-bottom: 0;
     margin-top: 0;
+    margin-bottom: 0;
+    padding: 0;
+    padding-top: 10px; /* effectively 20px, since its 10 for the html and 10 for the body */
     background-color: black;
-    background-image: url("bgimg.png");
+    background-image: url("bgimg.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-clip: border-box;
@@ -17,31 +19,29 @@ html, body {
     overflow: hidden;
 }
 
-.searchdiv {
-    /* center */
-    display: block;
-    margin-top: 15%;
-    margin-left: auto;
-    margin-right: auto;
-    min-width: 825px;
-    width: 825px;
-    box-shadow: 0px 0px 10px 2px white;
-    background-color: rgba(0, 0, 0, .5);
-    padding: 20px;
-    border-radius: 3px;
-}
-
 #search-container {
     font-family: "Source Code Pro", monospace;
-    color: #00FF00;
+    color: antiquewhite;
     font-weight: 400;
     font-size: 100%;
-    min-width: 100%;
-    width: 100%;
+    min-width: Calc(100% - 80px);
+    width: Calc(100% - 80px);
+    background-color: rgba(0,0,0,.25);
+    box-shadow: 0px 0px 5px black;
+    margin-left: 40px;
+    margin-right: 40px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    display: block;
 }
 
 #search-container::before {
     content: "internet:~ will$";
+    color: firebrick;
+    margin: 0;
+    padding: 0;
 }
 
 .searchbox {
@@ -49,9 +49,8 @@ html, body {
     color: inherit;
     font-size: inherit;
     font-weight: inherit;
-    width: Calc(100% - 190px);
-    min-width: Calc(100% - 190px);
-    height: 35px;
+    width: Calc(100% - 394px);
+    min-width: Calc(100% - 394px);
     border-top: none;
     border-left: none;
     border-right: none;
@@ -60,6 +59,15 @@ html, body {
     /* was used to center before margin-left: auto;
     margin-right: auto;*/
     text-align: left;
+}
+
+#time {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    text-align: right;
+    width: 160px;
+    float: right;
 }
 
 .searchbox:focus {
@@ -83,18 +91,23 @@ html, body {
 }
 
 table {
+    display: none;
     margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 20px;
     padding-right: 20px;
     font-family: "Source Code Pro", monospace;
-    background-color: rgb(0, 0, 0, .5);
+    background-color: transparent;
+}
+
+tr {
+    background-color: rgba(0,0,0,.25);
 }
 
 th, td {
-    padding-right: 10px;
-    padding-left: 10px;
+    padding-right: 30px;
+    padding-left: 30px;
 }
 
 th {
@@ -120,4 +133,14 @@ a:hover {
 a:visited {
     color: inherit;
     text-decoration: none;
+}
+
+.footer {
+    color: rgba(0,0,0,.25);
+    font-family: "Source Code Pro", monospace;
+    width: 100%;
+    text-align: center;
+    display: block;
+    position: absolute;
+    bottom: 0;
 }
