--- a/index.css
+++ b/index.css
@@ -121,3 +121,13 @@ a:visited {
     position: absolute;
     bottom: 0;
 }
+
+.bing {
+	display: block;
+	position: absolute;
+	z-index: 1000;
+	top: 100px;
+	bottom: 100px;
+	right: 100px;
+	left: 100px;
+}
