--- a/index.css
+++ b/index.css
@@ -7,6 +7,8 @@ body, html {
 	background-clip: border-box;
 	background-position: center;
 	background-size: cover;
+	font-feature-settings: "calt" 1 !important; /* enables ligatures in Edge */
+	text-rendering: optimizeLegibility; /* force ligatures in WebKit, Blink, and Gecko */
 }
 
 html {
@@ -30,7 +32,7 @@ body {
 	-webkit-backdrop-filter: saturate(1.8) blur(15px);
 	backdrop-filter: saturate(1.8) blur(15px);
 	box-shadow: 0 0 20px 0 rgba(0, 0, 0, .75);
-	font-family: 'Myriad Set Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Fira Code', 'Myriad Set Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color: rgba(0, 0, 0, .65);
 	font-size: 400%;
 	font-weight: inherit;
