--- a/index.css
+++ b/index.css
@@ -5,8 +5,8 @@ body, html {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-clip: border-box;
-	background-position: center;
-	background-size: cover;
+	background-position: -20px center;
+	background-size: Calc(100% + 40px) auto;
 	font-feature-settings: "calt" 1 !important; /* enables ligatures in Edge */
 	text-rendering: optimizeLegibility; /* force ligatures in WebKit, Blink, and Gecko */
 }
@@ -52,8 +52,9 @@ body {
 	background-clip: border-box;
 	background-position: center;
 	background-size: cover;
-	width: 100%;
+	width: Calc(100% + 40px); /* gives a bit of padding on the sides for a hard edge on the blur */
 	height: 87px;
+	overflow: hidden;
 	text-align: center;
 	position: absolute;
 	display: block;
@@ -63,8 +64,27 @@ body {
 	-webkit-transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
-	filter: saturate(1.8);
-	-webkit-filter: saturate(1.8);
+	/*filter: saturate(1.8) blur(15px);
+	-webkit-filter: saturate(1.8) blur(15px);
+	-ms-filter: saturate(1.8) blur(15px);*/
+}
+
+.bgimg {
+	padding: 0;
+	margin: 0;
+	display: block;
+	min-height: 151px;
+	max-width: 100%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	filter: saturate(1.8) blur(15px);
+	-webkit-filter: saturate(1.8) blur(15px);
+	-ms-filter: saturate(1.8) blur(15px);
 }
 
 /* WORKAROUND FOR OTHER BROWSERS:
@@ -85,6 +105,10 @@ body {
 		}
 		.searchBoxBG {
 			display: none !important;
+		}
+		html, body {
+			background-size: cover !important;
+			background-position: center !important;
 		}
 	}
 }
