--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body, html {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-clip: border-box;
-	background-position: -20px center;
+	background-position: center;
 	background-size: Calc(100% + 40px) auto;
 	font-feature-settings: "calt" 1 !important; /* enables ligatures in Edge */
 	text-rendering: optimizeLegibility; /* force ligatures in WebKit, Blink, and Gecko */
