--- a/index.css
+++ b/index.css
@@ -1,134 +1,27 @@
 body, html {
 	margin: 0;
-	background-color: #284357;
-	background-image: url("bg.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-clip: border-box;
-	background-position: -20px center;
-	background-size: Calc(100% + 40px) auto;
-	font-feature-settings: "calt" 1 !important; /* enables ligatures in Edge */
-	text-rendering: optimizeLegibility; /* force ligatures in WebKit, Blink, and Gecko */
-}
-
-html {
 	padding: 0;
 }
 
 body {
-	overflow: hidden;
+	background-color: #262626;
 }
 
-.searchBox {
-	width: 100%;
+.searchbox {
 	position: absolute;
 	display: block;
-	left: 50%;
-	top: 50%;
+	width: 550px;
 	-webkit-transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
-	/* these are for safari only, moved to down below
-	 * 	background-color: rgba(255, 255, 255, 0.1);
-	 * 		-webkit-backdrop-filter: saturate(1.8) blur(15px);
-	 * 			backdrop-filter: saturate(1.8) blur(15px);
-	 * 				*/
-	background-color: rgba(255, 255, 255, 0.1); /* alpha used to be .75, for reference */
-	box-shadow: 0 0 20px 0 rgba(0, 0, 0, .75);
-	font-family: 'Fira Code', 'Myriad Set Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	color: rgba(0, 0, 0, .65);
-	font-size: 400%;
-	font-weight: inherit;
+	top: 50%;
+	left: 50%;
 	border: none;
-	text-align: center;
-	padding: 5px;
+	color: #d0d0d0;
+	border-bottom: 2px solid #808074;
+	background-color: #262626;
 }
 
-/* working in FF, but not Chrome for some reason. Background offset by 50% to the left in Chrome. */
-.searchBoxBG {
-	background-image: url("bg.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-clip: border-box;
-	background-position: center;
-	background-size: cover;
-	width: Calc(100% + 40px); /* gives a bit of padding on the sides for a hard edge on the blur */
-	height: 87px;
-	overflow: hidden;
-	text-align: center;
-	position: absolute;
-	display: block;
-	padding: 0;
-	left: 50%;
-	top: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-	/*filter: saturate(1.8) blur(15px);
-	 * 	-webkit-filter: saturate(1.8) blur(15px);
-	 * 		-ms-filter: saturate(1.8) blur(15px);*/
-}
-
-.bgimg {
-	padding: 0;
-	margin: 0;
-	display: block;
-	min-height: 151px;
-	max-width: 100%;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	-moz-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-	filter: saturate(1.8) blur(15px);
-	-webkit-filter: saturate(1.8) blur(15px);
-	-ms-filter: saturate(1.8) blur(15px);
-}
-
-/* WORKAROUND FOR OTHER BROWSERS:
- *  * Look into using the same background, masked to be only behind the box,
- *   * located in the same place as the .body background, and then use
- *    * filter/-webkit-filter/etc. to apply a blur/saturation.
- *     * Modify BG color of box to be the same as the one in the safari box below.
- *      * */
-
-/* target safari for webkit backdrop blur */
-@media not all and (min-resolution:.001dpcm) { @media {
-	/*anything in here is safari only*/
-	.searchBox {
-		-webkit-backdrop-filter: saturate(1.8) blur(15px);
-		backdrop-filter: saturate(1.8) blur(15px);
-		background-color: rgba(255, 255, 255, 0.1) !important;
-	}
-	.searchBoxBG {
-		display: none !important;
-	}
-	html, body {
-		background-size: cover !important;
-		background-position: center !important;
-	}
-}}
-
-::selection {
-	background-color: transparent;
-	color: rgba(255, 255, 255, .65);
-}
-
-.noblur::selection {
-	color: rgba(0, 0, 0, 1);
-}
-
-::-moz-selection {
-	background-color: transparent;
-	color: rgba(255, 255, 255, .65);
-}
-
-.noblur::-moz-selection {
-	color: rgba(0, 0, 0, 1);
-}
-
-.searchBox:focus {
+.searchbox:focus {
 	outline: none;
 }
