--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
-body, html {
+html, body {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	font-family: 'Fira Code', monospace;
+	font-family: 'Fire Code', monospace;
 }
 
 body {
@@ -10,66 +10,47 @@ body {
 }
 
 .searchbox {
-	position: absolute;
+	background-color: #262626;
+	position: relative;
 	display: block;
 	width: 33%;
 	min-width: 550px;
-	-webkit-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-	top: 50%;
-	left: 50%;
-	border: none;
-	color: #d0d0d0;
-	border-bottom: 2px solid #808074;
-	background-color: #262626;
+	border: 2px solid #808074;
 	font-family: 'Fira Code', monospace;
 	font-size: 100%;
+	color: #d0d0d0;
+	padding: 4px;
 }
 
 .searchbox:focus {
 	outline: none;
 }
 
-.statusbar {
+.centerbox {
 	display: block;
 	position: absolute;
-	height: 16px;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	top: Calc(100% - 16px);
-	left: 0;
-	background-color: #4e4e4e;
-	font-size: 75%;
-	line-height: 16px;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
 }
 
-.statusbox {
-	display: block;
-	position: absolute;
-	text-align: center;
-	height: 16px;
-	margin: 0;
-	padding: 0;
+.stream {
+	color: #808074;
 }
 
-.mode {
-	background-color: white;
-	color: black;
-	width: 24px;
+.status {
+	display: inline-block;
+	height: 10px;
+	width: 10px;
+	border-radius: 5px;
 }
 
-.file {
-	background-color: #ff875f;
-	width: 88px;
-	color: white;
-	left: 24px;
+.live {
+	background-color: red;
 }
 
-.time {
-	background-color: #5fafaf;
-	color: white;
-	right: 0;
-	width: 72px;
+.offline {
+	background-color: grey;
 }
